--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
     "@whiskeysockets/baileys": "^6.7.9",
-    "dotenv": "^16.4.7",
+    "jimp": "^1.6.0",
+    "link-preview-js": "^3.0.12",
     "open": "^10.1.0",
-    "qrcode-terminal": "^0.12.0"
+    "qrcode-terminal": "^0.12.0",
+    "sharp": "^0.33.5"
   }
 }
